; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/lguest/x86/extr_core.c_lguest_pages.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/lguest/x86/extr_core.c_lguest_pages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lguest_pages = type { i32 }

@SWITCHER_ADDR = common dso_local global i64 0, align 8
@SHARED_SWITCHER_PAGES = common dso_local global i32 0, align 4
@PAGE_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.lguest_pages* (i32)* @lguest_pages to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.lguest_pages* @lguest_pages(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @SWITCHER_ADDR, align 8
  %4 = load i32, i32* @SHARED_SWITCHER_PAGES, align 4
  %5 = load i32, i32* @PAGE_SIZE, align 4
  %6 = mul nsw i32 %4, %5
  %7 = sext i32 %6 to i64
  %8 = add nsw i64 %3, %7
  %9 = inttoptr i64 %8 to %struct.lguest_pages*
  %10 = load i32, i32* %2, align 4
  %11 = zext i32 %10 to i64
  %12 = getelementptr inbounds %struct.lguest_pages, %struct.lguest_pages* %9, i64 %11
  ret %struct.lguest_pages* %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
